SM-00: Add new translations

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -369,7 +369,22 @@
       "Title": "Security"
     },
     "DeleteAccount": {
-      "Title": "Delete Account"
+      "Title": "Delete Account",
+      "Subtitle": "Are you sure you want to delete your account?",
+      "ToastDeletion": "Your account is undergoing deletion",
+      "About": {
+        "TitleDeletion": "About Account Deletion",
+        "FirstParagraph": "This means that all of your assets and data associated with your account will be permanently deleted.",
+        "SecondParagraph": "Unfortunately, this action is irreversible and cannot be reversed in the future. We understand that this decision may not be easy for you to make.",
+        "ThirdParagraph": "Therefore, we allow you to have 30 days to log in and cancel your account deletion request. Once this period has passed, your account will be permanently deleted.",
+        "TitleReason": "Reason of Deletion",
+        "FourthParagraph": "If you wish to delete your account, please select a reason from the dropdown menu below : "
+      },
+      "InputDeletion": {
+        "ReasonInput": "Reason",
+        "ReasonPlaceholder": "Tell us more",
+        "PasswordInput": "Input Password"
+      }
     },
     "TnC&PP": {
       "Title": "TnC & Privacy Policy"
@@ -448,7 +463,7 @@
       }
     },
     "Tips": {
-      "Title": "Tips & Subscriptions",
+      "Title": "Tip & Subscriptions",
       "Tab": {
         "Donation": "Donation",
         "Subs": "Subscription"
