--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -844,5 +844,8 @@
     "Finish": "Finish Order",
     "Track": "Track Status",
     "Cancel": "Cancel Order"
+  },
+  "Tracking": {
+    "Title": "Track Status"
   }
 }
