feat: transaction detail ticket

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -853,7 +853,8 @@
         "Delivery": "Delivery Price",
         "Promo": "Promo code",
         "Tax": "Tax"
-      }
+      },
+      "Ticket": "Ticket"
     },
     "Finish": "Finish Order",
     "Track": "Track Status",
