--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -852,7 +852,8 @@
         "Delivery": "Delivery Price",
         "Promo": "Promo code",
         "Tax": "Tax"
-      }
+      },
+      "Ticket": "Ticket"
     },
     "Finish": "Finish Order",
     "Track": "Track Status",
