feat: update logo, auth validation

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -2,7 +2,7 @@
   "General": {
     "Or": "Or",
     "Begin": "Begin Today",
-    "TopDescription": "Sign In or Register to Explore All Our Features",
+    "TopDescription": "Sign In or Register to explore full features and support the musician",
     "Yes": "Yes",
     "No": "No",
     "NoVerifCode": "Didn’t receive verification codes? click to resend",
@@ -75,7 +75,7 @@
       "Subtitle": "We have sent a 6-digit verification code to your email {{email}}. Check your inbox and enter the verification code here"
     },
     "ResendAfter": "You can resend recovery code after ",
-    "ResendSuccess": "We've just resend a new code!",
+    "ResendSuccess": "We've just resent a new code!",
     "Accepted": "Recovery code accepted",
     "Rejected": "Please enter a valid recovery code"
   },
@@ -193,11 +193,11 @@
       }
     },
     "ListMood": {
-      "Title" : "Mood",
+      "Title": "Mood",
       "EmptyState": "Sorry, we don't have any music available for this mood at the moment. Check back soon as we're always adding new music!"
     },
     "ListGenre": {
-      "Title" : "Genre",
+      "Title": "Genre",
       "EmptyState": "Sorry, we don't have any music available for this genre at the moment. Check back soon as we're always adding new music!"
     },
     "DiveIn": {
@@ -214,7 +214,7 @@
       }
     },
     "ComingSoon": {
-      "Title" : "Coming Soon",
+      "Title": "Coming Soon",
       "EmptyState": "Unfortunately, there are no new albums coming soon from any musicians. We'll let you know as soon as something new is on the horizon."
     },
     "Song": {
@@ -224,7 +224,7 @@
       "EmptyState": "We couldn't find any {{title}} for you. Check back soon as we're always adding new musician!"
     },
     "Playlist": {
-      "Title" : "Playlist",
+      "Title": "Playlist",
       "EmptyState": "Oops! We couldn't find any playlists for you. Create your own & help other discover great music!"
     }
   },
@@ -394,12 +394,12 @@
         "ReasonPlaceholder": "Tell us more",
         "PasswordInput": "Input Password"
       },
-      "Reason" : {
-        "First" : "I don’t feel safe on Beamco",
-        "Second" : "I don’t find Beamco useful",
-        "Third" : "I have another Beamco Account",
-        "Fourth" : "I spend too much time using Beamco",
-        "Five" : "I don’t understand how to use Beamco"
+      "Reason": {
+        "First": "I don’t feel safe on Beamco",
+        "Second": "I don’t find Beamco useful",
+        "Third": "I have another Beamco Account",
+        "Fourth": "I spend too much time using Beamco",
+        "Five": "I don’t understand how to use Beamco"
       }
     },
     "TnC&PP": {
