--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -244,6 +244,7 @@
     "Title": "行動",
     "Quantity": "數量",
     "Description": "描述",
+    "ComingSoon": "Coming Soon\nStay tuned for the big reveal!",
     "Concert": {
       "Title": "門票",
       "NoConcert": "未有活動",
