--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -367,11 +367,14 @@
     "Month": "Month",
     "Year": "Year",
     "Support": "Add support to your plan",
-    "Optional": "Support (optional)",
+    "Optional": "Bonus Support (optional)",
     "InputBonus": "Input Bonus",
     "ErrorCoinBonus": "Insufficient coin, add more coin to give bonus",
     "ErrorCoinSubs": "Insufficient coin, add more coin to subscribe",
-    "Edit": "Edit My Exclusive Content"
+    "Edit": "Edit My Exclusive Content",
+    "Active": "Subscription Active",
+    "Success": "Congratulations! Your Exclusive Content have been Paid!",
+    "View": "View Exclusive Content"
   },
   "Setting": {
     "Title": "Settings",
