--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -780,6 +780,7 @@
     "Subtitle2": "BEAMCO Credit allows you to parcitipate in Musician’s upside and grow their community",
     "Subtitle3": "Find Musician who is providing a lot of value? Rewards them with BEAMCO Credit as a support",
     "MyCoin": "My Credit",
+    "ButtonWithdraw": "Withdraw",
     "Filter": {
       "Buy": "Buy Package",
       "Transaction": "Transaction",
@@ -793,6 +794,9 @@
       "TransactionStatus": "Transaction Status",
       "Notes": "Notes"
     }
+  },
+  "Withdrawal": {
+    "Title": "Withdrawal"
   },
   "RecoverAccount": {
     "Title": "Account Deletion",
