--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -194,7 +194,26 @@
       },
       "Analytic": {
         "Income": {
-          "Title": "收入"
+          "Title": "收入",
+           "TopCard" : {
+            "Tip" : "Tip Earned",
+            "Subs" : "Subs Earned"
+          },
+          "Main" : {
+            "Title" : "My Income"
+          },
+          "Filter" : {
+            "Type" : {
+              "All" : "All Income",
+              "Tip" : "Tip",
+              "Subs" : "Subscription"
+            },
+            "Range" : {
+              "Monthly" : "Monthly",
+              "Weekly" : "Weekly",
+              "Daily" : "Daily"
+            }
+          }
         },
         "Fans": {
           "Title": "粉絲"
