--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -194,10 +194,14 @@
       },
       "Analytic": {
         "Income": {
-          "Title": "收入",
-           "TopCard" : {
+          "Title": "Income",
+          "TopCard" : {
             "Tip" : "Tip Earned",
             "Subs" : "Subs Earned"
+          },
+          "BottomCard" : {
+            "Avg" : "Avg {{range}} earn",
+            "Earned" : "Earned this {{range}}"
           },
           "Main" : {
             "Title" : "My Income"
@@ -211,7 +215,10 @@
             "Range" : {
               "Monthly" : "Monthly",
               "Weekly" : "Weekly",
-              "Daily" : "Daily"
+              "Daily" : "Daily",
+              "Month" : "Month",
+              "Week" : "Week",
+              "Today" : "Today"
             }
           }
         },
