--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -224,13 +224,21 @@
         },
         "Fans": {
           "Title": "粉絲",
+          "Main" : {
+            "Title" : "Fans Growth"
+          },
           "Filter" : {
             "Range" : {
               "Monthly" : "Monthly",
               "Weekly" : "Weekly",
               "Daily" : "Daily"
             }
-          }
+          },
+          "Growth" : {
+            "BeFan":"Followers be a fans!",
+            "FansEarn":"Fans earned weekly"
+          },
+          "FansInteract":"Fans actively interact with you"
         },
         "Post": {
           "Title": "郵政"
