add fans age component with wiring setup

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -243,6 +243,9 @@
             "Title" : "Your Top Fans",
             "Link" : "View All",
             "FullScreen": "Your Fans"
+          },
+          "FansAge": {
+            "Title" : "Fans Age"
           }
         },
         "Post": {
