add album row type component

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -259,6 +259,14 @@
         },
         "Album": {
           "Title": "Album",
+          "Filter" : {
+            "Range" : {
+              "Alltime" : "All Time",
+              "Monthly" : "Monthly",
+              "Weekly" : "Weekly",
+              "Daily" : "Daily"
+            }
+          },
           "Listeners": {
             "Title": "Your Active Listener",
             "Growth": {
