wiring fans tab

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -260,7 +260,9 @@
           "TopFans": {
             "Title" : "Your Top Fans",
             "Link" : "View All",
-            "FullScreen": "Your Fans"
+            "FullScreen": "Your Fans",
+            "EmptyState": "Oops! We couldn't find any Top fans for you. Post some story or release album to make your own cult!"
+         
           },
           "FansAge": {
             "Title" : "Fans Age"
@@ -269,7 +271,8 @@
             "Title" : "Fans Gender"
           },
           "FansCountry": {
-            "Title" : "Your Fans Country"
+            "Title" : "Your Fans Country",
+            "EmptyState": "Oops! We couldn't find any of your fans country. Post some story or release album to make your own cult!"
           }
         },
         "Post": {
