--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -717,14 +717,43 @@
         "Title": "USE REFERRAL",
         "Text1": "Earn 50 free credits",
         "Text2": "Your Friend’s Referral Code",
-        "Text3": "Refferal code can not be changed",
+        "Text3": "Referral code can not be changed",
         "Invalid": "Referral code invalid"
       },
       "OnBoard": {
-        "Title": "Do you have a referral code?",
-        "Subtitle": "Enter your code to jumpstart your Beamco Journey!",
+        "Title": "Scan QR Code to Earn Bonuses!",
+        "Subtitle": "Scan referral code by pressing scan now button, to earn some free stuff and bonuses",
         "Actived": "Referral Activated",
         "Success": "Congratulations! now you will get 5% credit every transaction!"
+      }
+    },
+    "ReferralQR": {
+      "Title": "Referral Code",
+      "ReferFriend": {
+        "Title": "REFER A FRIEND",
+        "Text1": "Refer a friend and earn 50 free credits",
+        "Text2": "Use your @username as referral code",
+        "Btn1": "Refer a friend using link",
+        "Btn2": "Read Terms of Use"
+      },
+      "UseRefer": {
+        "Title": "USE REFERRAL",
+        "Text1": "Earn 50 free credits",
+        "Text2": "Your Friend’s Referral Code",
+        "Text3": "Referral code can not be changed",
+        "Invalid": "Referral code invalid"
+      },
+      "OnBoard": {
+        "Title": "Scan QR Code to Earn Bonuses!",
+        "Subtitle": "Scan referral code by pressing scan now button, to earn some free stuff and bonuses",
+        "Actived": "Referral Activated",
+        "SuccessTitle": "Your scan was successful!",
+        "SuccessDesc": "Congratulations! now you will get 5% credit every transaction!",
+        "Continue": "Continue",
+        "Next": "Next",
+        "DividerOnScan": "Or",
+        "DividerOnManualEnter": "Or Try Another Method",
+        "ReferralAdded": "Referral Code Added"
       }
     },
     "Language": {
