--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -726,6 +726,35 @@
         "Success": "恭喜！ 現在您每筆交易將獲得 5% 的積分！"
       }
     },
+    "ReferralQR": {
+      "Title": "推薦碼",
+      "ReferFriend": {
+        "Title": "REFER A FRIEND",
+        "Text1": "每筆交易推薦並賺取 5% 的佣金",
+        "Text2": "使用您的@用戶名作為推薦碼",
+        "Btn1": "使用鏈接推薦給朋友",
+        "Btn2": "閱讀條款細則"
+      },
+      "UseRefer": {
+        "Title": "USE REFERRAL",
+        "Text1": "於每筆交易獲取 5% Beamco 積分",
+        "Text2": "你朋友的推薦碼",
+        "Text3": "推薦碼無法更改",
+        "Invalid": "Referral code invalid"
+      },
+      "OnBoard": {
+        "Title": "你有推薦碼嗎？",
+        "Subtitle": "輸入您的推薦碼以快速啟動您的 Beamco 之旅！",
+        "Actived": "推薦已激活",
+        "SuccessTitle": "Your scan was successful!",
+        "SuccessDesc": "Congratulations! now you will get 5% credit every transaction!",
+        "Continue": "Continue",
+        "Next": "Next",
+        "DividerOnScan": "Or",
+        "DividerOnManualEnter": "Or Try Another Method",
+        "ReferralAdded": "Referral Code Added"
+      }
+    },
     "Language": {
       "Title": "語言",
       "Placeholder": "Select Language",
